Stop read more blocks from messing with spacing

--- a/uubloomington/uubloomington/static/css/uubloomington.css
+++ b/uubloomington/uubloomington/static/css/uubloomington.css
@@ -1068,6 +1068,10 @@ footer > .footer-content > * {
     display: none;
 }
 
+.block-read_more {
+    display: none;
+}
+
 .page-preview.stream img {
     display: none;
 }
